--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "name": "react-starter",
   "version": "0.1.0",
   "private": true,
-  "peerDependencies": {
+  "dependencies": {
     "@chakra-ui/react": "^2.0.0-next.3",
     "axios": "^0.26.1",
     "babel-jest": "^27.5.1",
     "bootstrap": "^5.1.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "react": "^16.8.6",
+    "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
-    "react-dom": "^16.8.6",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
-    "styled-components": "^>= 4",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
