--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.0.0-next.3",
+    "@zarconontol/enzyme-adapter-react-18": "^0.7.3",
     "axios": "^0.26.1",
     "babel-jest": "^27.5.1",
     "bootstrap": "^5.1.3",
@@ -16,7 +17,8 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "enzyme": "^3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
